--- a/frontend/src/styles/Nav.css
+++ b/frontend/src/styles/Nav.css
@@ -2,6 +2,7 @@
     position: relative;
     grid-area: nav;
     background-color: white;
+    z-index: 1;
 }
 
 .NavWrapper {
